Opened 13 years ago

Closed 13 years ago

#2735 closed defect (fixed)

h263 crash with low mem

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: crash SIGSEGV
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

(gdb) r -f h263 -max_alloc 120000 -i vble.avi -f null -
The program being debugged has been started already.
Start it from the beginning? (y or n) y

Starting program: D:\MinGW\msys\1.0\ffmpeg-HEAD-7f866c1\ffmpeg_g.exe -f h263 -ma
x_alloc 120000 -i vble.avi -f null -
[New Thread 3932.0xb08]
ffmpeg version 1.1.git-7f866c1 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jun 29 2013 22:13:29 with gcc 4.6.2 (GCC)
  configuration: --disable-ffprobe --disable-yasm --disable-w32threads --enable-
gpl
  libavutil      52. 37.101 / 52. 37.101
  libavcodec     55. 17.100 / 55. 17.100
  libavformat    55. 10.100 / 55. 10.100
  libavdevice    55.  2.100 / 55.  2.100
  libavfilter     3. 77.101 /  3. 77.101
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
[h263 @ 04c9e560] header damaged
    Last message repeated 2 times
[h263 @ 04c9e560] Bad H263 id
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] Bad H263 id
[h263 @ 04c9e560] header damaged
    Last message repeated 1 times
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] Bad UFEP type (2)
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] H263 SAC not supported
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
[h263 @ 04c9e560] warning: first frame is no keyframe
[h263 @ 04c9e560] illegal dc 0 at 8 0
[h263 @ 04c9e560] illegal ac vlc code at 8x0
[h263 @ 04c9e560] Error at MB: 8
[h263 @ 04c9e560] illegal ac vlc code at 1x3
[h263 @ 04c9e560] Error at MB: 37
[h263 @ 04c9e560] Error at MB: 64
[h263 @ 04c9e560] concealing 77 DC, 77 AC, 77 MV errors in P frame
Input #0, h263, from 'vble.avi':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: h263, yuv420p, 176x144 [SAR 12:11 DAR 4:3], 27.17 fps, 2
9.97 tbr, 1200k tbn, 29.97 tbc
[New Thread 3932.0x96c]
[New Thread 3932.0xc7c]
[New Thread 3932.0xbcc]
[New Thread 3932.0xe70]
[New Thread 3932.0xba4]
[New Thread 3932.0xfa0]
[New Thread 3932.0xf0]
[New Thread 3932.0xe58]
[New Thread 3932.0x9e8]
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf55.10.100
    Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuv420p, 176x144 [SAR 12:1
1 DAR 4:3], q=2-31, 200 kb/s, 90k tbn, 29.97 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (h263 -> rawvideo)
Press [q] to stop, [?] for help
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad H263 id
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad H263 id
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad UFEP type (2)
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] H263 SAC not supported
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] warning: first frame is no keyframe
[h263 @ 04c9e560] illegal dc 0 at 8 0
[h263 @ 04c9e560] illegal ac vlc code at 8x0
[h263 @ 04c9e560] Error at MB: 8
[h263 @ 04c9e560] illegal ac vlc code at 1x3
[h263 @ 04c9e560] Error at MB: 37
[h263 @ 04c9e560] Error at MB: 64
[h263 @ 04c9e560] concealing 77 DC, 77 AC, 77 MV errors in P frame
[null @ 04d72ac0] Encoder did not produce proper pts, making some up.
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Bad marker
[h263 @ 04c9e560] header damaged
Error while decoding stream #0:0: Error number -1 occurred
[h263 @ 04c9e560] Cannot allocate memory.

Program received signal SIGSEGV, Segmentation fault.
ff_MPV_frame_start (s=0x4c9ee60, avctx=0x4c9e560)
    at libavcodec/mpegvideo.c:1513
1513                    &s->picture[i] != s->next_picture_ptr &&
(gdb) bt
#0  ff_MPV_frame_start (s=0x4c9ee60, avctx=0x4c9e560)
    at libavcodec/mpegvideo.c:1513
#1  0x0068cffa in ff_h263_decode_frame (avctx=0x4c9e560, data=0x4d4a400,
    got_frame=0x22fa9c, avpkt=0x22f768) at libavcodec/h263dec.c:649
#2  0x005968ba in avcodec_decode_video2 (avctx=0x4c9e560, picture=0x4d4a400,
    got_picture_ptr=0x22fa9c, avpkt=0x22f898) at libavcodec/utils.c:1947
#3  0x0041286c in decode_video (got_output=<optimized out>,
    pkt=<optimized out>, ist=<optimized out>) at ffmpeg.c:1654
#4  output_packet (ist=0x4ca1c00, pkt=0x22fbe0) at ffmpeg.c:1852
#5  0x004154db in process_input (file_index=80474016) at ffmpeg.c:3064
#6  0x00aef098 in transcode_step () at ffmpeg.c:3160
#7  transcode () at ffmpeg.c:3212
#8  main (argc=10, argv=<optimized out>) at ffmpeg.c:3390
(gdb)

Attachments (1)

vble.avi (568.0 KB ) - added by ami_stuff 13 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 13 years ago

Attachment: vble.avi added

comment:1 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavcodec
Keywords: crash SIGSEGV added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 13 years ago

Should be fixed, thank you for the report!

comment:3 by Carl Eugen Hoyos, 13 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.