Avoid a null pointer dereference after oom on frame size change in mpegvideo.c.

Fixes ticket #2735.